--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 </ol>
 
 <div class="visual">
-    <img src="https://example.com/lexing-parsing-interpreting.png" alt="Lexing to Interpreting">
+    <img src="lexting.png" alt="Lexing to Interpreting">
     <p><em>(Visual: A flowchart showing the process from source code to execution.)</em></p>
 </div>
 
@@ -368,60 +368,11 @@
     </ul>
 </div>
 
-<hr>
 
-<h2 id="helpful-tips-for-managing-exam-anxiety">Helpful Tips for Managing Exam Anxiety</h2>
 
-<h3>Create a Relaxing Study Environment</h3>
 
-<ul>
-    <li><strong>Comfortable Space</strong>: Find a quiet, comfortable place to study.</li>
-    <li><strong>Minimize Distractions</strong>: Turn off notifications and reduce clutter.</li>
-    <li><strong>Ambient Music</strong>: Listen to calm, instrumental music if it helps.</li>
-</ul>
 
-<h3>Study Techniques</h3>
 
-<ul>
-    <li><strong>Active Recall</strong>: Test yourself on the material.</li>
-    <li><strong>Teach Someone Else</strong>: Explaining concepts can improve understanding.</li>
-    <li><strong>Mind Maps</strong>: Create visual diagrams linking concepts.</li>
-</ul>
-
-<div class="visual">
-    <img src="https://example.com/mind-map.png" alt="Mind Map Example">
-    <p><em>(Visual: A mind map connecting the topics covered.)</em></p>
-</div>
-
-<h3>Wellness Tips</h3>
-
-<ul>
-    <li><strong>Deep Breathing Exercises</strong>: Helps reduce stress.</li>
-    <li><strong>Regular Breaks</strong>: Use techniques like the Pomodoro Technique.</li>
-    <li><strong>Healthy Habits</strong>: Maintain good sleep, nutrition, and hydration.</li>
-</ul>
-
-<h3>Positive Affirmations</h3>
-
-- **Believe in Yourself**: Remind yourself of your capabilities.
-- **Progress Over Perfection**: Focus on learning, not just grades.
-- **You're Not Alone**: Many students experience the same feelings.
-
----
-
-## Final Thoughts
-
-Remember, complex topics become manageable when broken down into smaller parts. Use the memory aids and visuals provided to reinforce your understanding. Be patient with yourself, and know that every effort you make is a step toward success.
-
-You've got this! Keep pushing forward, and don't hesitate to revisit any section as needed.
-
----
-
-## HTML Code
-
-Below is the HTML code for the content above. You can copy and paste it into an HTML file to view it in your browser.
-
-```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
